--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,95 @@ html {
   font-family: Menlo, Noto Mono;
 }
 
-.App {
+.logo {
+  display: block;
+  height: 200px;
+  line-height: 0;
+  margin: 15px 0;
+  overflow: hidden;
   text-align: center;
+}
+
+.logo img {
+  height: 100%;
+}
+
+.title {
+  height: 30px;
+  margin-bottom: 15px;
+  margin-top: 15px;
+  text-align: center;
+}
+
+.lb-items {
+  margin: 0 auto;
+  max-width: 1200px;
+}
+
+.lb-items .lb-header,
+.lb-items .lb-row {
+  display: flex;
+  width: 100%;
+}
+
+.lb-items .lb-header {
+  color: #aaa;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+
+.lb-items .lb-row {
+  background: linear-gradient(90deg, #456 0, #326);
+  color: #fff;
+  font-size: 28px;
+  margin-bottom: 5px;
+}
+
+.lb-items .lb-header>div,
+.lb-items .lb-row>div {
+  padding: 15px 30px;
+  text-align: center;
+}
+
+.lb-items .lb-header>div:nth-child(1),
+.lb-items .lb-row>div:nth-child(1) {
+  width: 20%;
+}
+
+.lb-items .lb-header>div:nth-child(2),
+.lb-items .lb-row>div:nth-child(2) {
+  /* font-weight: bold; */
+  margin-right: auto;
+  text-align: left;
+  width: 50%;
+}
+
+.lb-items .lb-header>div:nth-child(n+3),
+.lb-items .lb-row>div:nth-child(n+3) {
+  display: block;
+  text-align: left;
+  width: 20%;
+}
+
+.lb-items .lb-row:nth-child(n+2):nth-child(-n+4)>div:nth-child(-n+2) {
+  color: #222;
+}
+
+.lb-items .lb-row:nth-child(2) {
+  background: linear-gradient(90deg, #fd4 0, #a61);
+}
+
+.lb-items .lb-row:nth-child(3) {
+  background: linear-gradient(90deg, #ccc 0, #666);
+}
+
+.lb-items .lb-row:nth-child(4) {
+  background: linear-gradient(90deg, #fc7 0, #864);
+}
+
+.lb-items .icon-trophy {
+  height: 28px;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
