--- a/src/App.css
+++ b/src/App.css
@@ -101,3 +101,77 @@ html {
   top: 50%;
   transform: translateY(-50%);
 }
+
+.lb-submit {
+  margin: 0 auto;
+  max-width: 1024px;
+}
+
+.lb-submit .lb-row {
+  display: flex;
+  width: 100%;
+}
+
+.lb-submit .lb-row>div {
+  font-size: 32px;
+  padding: 15px 30px;
+  text-align: center;
+}
+
+.lb-submit .lb-row>div:nth-child(1) {
+  margin-top: 10px;
+  min-width: 100px;
+  width: 15%;
+}
+
+.lb-submit .lb-row>div:nth-child(2) {
+  margin-right: auto;
+  text-align: left;
+  width: 60%;
+}
+
+.lb-submit .lb-row {
+  background: linear-gradient(90deg, #405666 0, #3d246b);
+  color: #fff;
+  margin-bottom: 5px;
+}
+
+.lb-submit .lb-row input {
+  background-color: transparent;
+  border-radius: 2px;
+  border: 1px solid #aab7b8;
+  font-size: 32px;
+  height: 40px;
+  line-height: 20px;
+  padding: 4px 10px;
+  width: 100%;
+}
+
+.lb-submit .lb-row input:focus {
+  border: 1px solid #00a1c9;
+  box-shadow: 0 0 0 1px #00a1c9;
+  outline: 0;
+}
+
+.text_normal {
+  color: #fff;
+}
+
+.text_red {
+  color: #e55;
+}
+
+.lb-btn-submit {
+  background-color: #ec7211;
+  background-image: linear-gradient(180deg, #f67c1b 0, #e15500);
+  border-color: #e76d0c #e15500 #e15500;
+  border-radius: 3px;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 24px;
+  text-align: center;
+  vertical-align: middle;
+  width: 250px;
+  height: 40px;
+}
